feat: add words api and quizzes endpoint
